# EasyTeleop

./: .dockerignore  .gitignore  .gitmodules  DataCollect.py  Dockerfile  MANIFEST.in  README.md  RealMan.py  SimulateServer.py  TeleopGroup.py  Teleoperation.py  VRSocket.py  api.md  backend.py  docker-compose.yml  node.py  pyproject.toml  run.py  run_test.py  run_webrtc.py  server.py
.github/workflows/: python-publish.yml
Camera/: BaseCamera.py  CameraManager.py  RealSenseCamera.py
Components/: DataCollect.py  HandVisualizer.py  MQTTStatusSync.py  TeleopMiddleware.py  Visualizer.py  WebSocketRPC.py  __init__.py
Device/: BaseDevice.py  __init__.py
Device/Camera/: BaseCamera.py  RealSenseCamera.py  TestCamera.py
Device/Hand/: BaseHand.py  Revo2OnRealMan.py
Device/Robot/: BaseRobot.py  RealMan.py  TestRobot.py
Device/VR/: BaseVR.py  VRSocket.py
Devices/: BaseDevice.py  VRSocket.py
Devices/Robots/: RealMan.py  Robot.py
Robots/: RealMan.py  Robot.py
TeleopGroup/: BaseTeleopGroup.py  DefaultTeleopGroup.py  SingleArmTeleopGroup.py  SingleArmWithTriggerTeleopGroup.py  TwoArmWithTriggerTeleopGroup.py  __init__.py
WebRTC/: StreamTracker.py  WebRTC.py
datasets/: robot_states.txt
docs/: Todo.md  api.md  data_format.md  database.md  device.md  postprocess.md  teleop_group.md
python/revo1_can/: README.md
python/revo2_canfd/: zqwl_canfd_dfu.py
run/: run.py  run_dds_test.py  run_field_trro.py  run_get_info.py  run_hand.py  run_hand_arm_trigger.py  run_hand_pico.py  run_hand_visualize.py  run_interpolation.py  run_mqtt_sync.py  run_pose_visualize.py  run_postprocess.py  run_realsense_test.py  run_revo2_direct.py  run_singel_arm.py  run_singel_arm_with_right_controller.py  run_singel_hand.py  run_teleopgroup.py  run_test.py  run_trro_robot.py  run_two_arm.py  run_two_arm_with_trigger_teleopgroup.py  run_two_hand.py  run_two_hand_arm_direct.py  run_vr_packet_analysis.py  run_webrtc.py  run_yushu_arm_23dof.py
server/: backend.py
src/EasyTeleop/Components/: DataCollect.py  PostProcess.py  RobotFeedbackPacker.py  (+2 more)
src/trro-gateway-sdk-x64-release/: config.json  config.json-simgle  config.json2  config_gen.py  device.pem  readme.md  test_camera.py  trro-test  trro_sample.cpp  trro_vad1.py  trro_vad2.py
static/: index.html  main.js  style.css
test/: PointsCloud.py  left_processed_1757851577.pcd  register_pcd_files.py  right_processed_1757851577.pcd  rpc_test.py  rsCloud.py  stereo_pointcloud.py  test.py
(+36 files in other folders)
