[project]
name = "realman-teleoperate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.2.6",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "robotic-arm>=1.1.1",
    "scipy>=1.15.3",
    "uvicorn>=0.35.0",
]
