[project]
name = "EasyTeleop"
version = "0.1.0"
description = "Easy teleoperation tool for robotic arm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiortc>=1.13.0",
    "av>=14.4.0",
    "fastapi>=0.116.1",
    "numpy>=2.2.6",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.7",
    "pyorbbecsdk>=1.3.2",
    "pyrealsense2>=2.56.5.9235",
    "pyyaml>=6.0.2",
    "robotic-arm>=1.1.1",
    "scipy>=1.15.3",
    "uuid>=1.30",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
